# TickList

./: .dockerignore  .gitignore  Dockerfile  README.md  redeploy.sh  run_all_test.sh  start_dev.bat  start_dev.sh
.github/workflows/: build-apk.yml  build-desktop.yml  build-image.yml  build-ipa.yml
backend/: app.py  config.yaml  config.yaml.example  models.py  requirements.txt  run_dev.py  run_prod.py
backend/config/: config_loader.py  database.py
backend/database/: __init__.py  connection.py  models.py  table_names.py
backend/middleware/: jwt_middleware.py  logging_middleware.py
backend/models/: __init__.py  ai.py
backend/routes/: ai.py  auth.py  calendar.py  countdown.py  counter.py  data.py  debug_log.py  filter.py  focus.py  list.py  note.py  pat.py  settings.py  statistics.py  tag.py  task.py  webauthn.py
backend/schemas/: ai.py
backend/services/: ai_service.py  debug_log_service.py  push_service.py  scheduler_service.py
backend/tests/: conftest.py  test_ai_pipeline_e2e.py  test_ai_pipeline_rules.py  test_auth.py  test_calendar.py  test_countdown.py  test_counter.py  test_counter_amount.py  test_data.py  test_filters.py  test_focus.py  (+11 more)
docs/: ipa-build-plan.md
frontend/: build_ipa.sh  capacitor.config.ts  generate_icons.py  package-lock.json  package.json  rsbuild.config.ts  tsconfig.json  vitest.config.ts  webpack.config.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
scripts/: build-desktop-mac.sh
(+215 files in other folders)
