[package]
name = "ticklist"
version = "1.0.0"
description = "TickList Desktop"
authors = ["TickList"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ticklist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
